# Shell-Master

./: .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  cli.py  pyproject.toml
app/: entrypoint.py
app/services/: __init__.py  jq_debugger_service.py  jq_formatter_service.py
assets/static/css/: style.css
assets/templates/: base.html  index.html  jq_debugger.html  jq_formatter.html
assets/templates/components/: button.html  custom_text_box.html
automations/: __main__.py  cli.py
automations/jq_core/: Readme.md  __init__.py  approach-devlopment.md  ast.py  constants.py  errors.py  input.py  lexer.py  parser.py  tokens.py  utils.py
automations/jq_core/tests/: test_lexer.py
docs/: architecture.md  debugger-design.md  formatter-how-it-works.md  how-it-works.md  tweaking-pretty-printing.md
examples/: basic_usage.py  example.jq  formatted.jq
jq_core/: Readme.md  __init__.py  formatter.py  parser.py
src/jqtools/: __init__.py  __main__.py  cli.py
src/jqtools/compiler/: __init__.py  ast.py  compiler.py  errors.py  inputs.py  lexer.py  parser.py  tokens.py
src/jqtools/tooling/: __init__.py  debugger.py  debugger_models.py  debugger_runtime.py  debugger_source.py  formatter.py  formatter_rules.py
tests/: __init__.py  conftest.py  test_compiler.py  test_tooling.py
tests/test_automations/: dummy_data.py  test_lexer.py  test_parser.py
tests/test_jq_core/: test_formatter.py
