[project]
name = "automations"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jq = "^1.10.0"
json5 = "^0.12.1"
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
debugpy = "^1.8.16"

[tool.poetry.scripts]
jqtools = "jqtools.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
