[project]
name = "automations"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest (>=8.4.2,<9.0.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jq = "^1.10.0"
json5 = "^0.12.1"
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
debugpy = "^1.8.16"
ipython = "^9.5.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
jqtools = "jqtools.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"