[project]
name = "jqtools"
version = "0.1.0"
description = "Compiler-first jq tooling with formatter and debugger foundations."
authors = []
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)"
]

[tool.poetry]
packages = [{ include = "jqtools", from = "src" }]

[tool.poetry.group.dev.dependencies]
jq = "^1.10.0"
json5 = "^0.12.1"
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"
debugpy = "^1.8.16"
ipython = "^9.5.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pre-commit = "^4.3.0"

[tool.poetry.scripts]
jqtools = "jqtools.cli:main"
automations = "jqtools.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
per-file-ignores = [
    "automations/jq_core/__init__.py:F401,I001",
]
